# AnimationSample

./: .gitignore  AnimationSample.sln  AnimationSample.vcxproj  AnimationSample.vcxproj.filters  Application.h  Attribute.cpp  Attribute.h  CMakeLists.txt  Draw.cpp  Draw.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Uniform.cpp  Uniform.h  WinMain.cpp  glad.c  glad.h  lit.frag  main.cpp  static.vert  test.vert
